--- a/develop/index.html
+++ b/develop/index.html
@@ -16,44 +16,65 @@
         <h1>Our Team</h1>
       </div>
     </div>
+    <!-- Manager card -->
       <div class="container">
         <div class="card">
         <div class="row text">
           <div class="col-sm-4">
             <div class="card-header">
-            <h2>humma</h2>
+            <h2>humma noshine</h2>
             <p class="lead">Manager</p></div>
             <h3><span class="badge badge-secondary">Contact Info</span>
             </h3>
             <ul class="list-group">
-              <li class="list-group-item">Email:         a@a</li>
-              <li class="list-group-item">Employee ID:   1</li>
-              <li class="list-group-item">Office Number: 022</li>
+              <li class="list-group-item">Email:         humma@yahoo.co.uk</li>
+              <li class="list-group-item">Employee ID:   123</li>
+              <li class="list-group-item">Office Number: 01214567899</li>
             </ul>
           </div>
           </div>
         </div>
       </div>
     </div>
-// 2nd card
-    <div class="container">
+<!-- Engineer card -->
+    <div class="container" id="engineer">
     <div class="card">
     <div class="row text">
       <div class="col-sm-4">
         <div class="card-header">
         <h2>undefined</h2>
-        <p class="lead">Manager</p></div>
+        <p class="lead">Engineer</p></div>
         <h3><span class="badge badge-secondary">Contact Info</span>
         </h3>
         <ul class="list-group">
           <li class="list-group-item">Email:         undefined</li>
           <li class="list-group-item">Employee ID:   undefined</li>
-          <li class="list-group-item">GitHub Profile: <a href= "https://github.com/HummaNosh" target="_blank">profile</a></li>
+          <li class="list-group-item">GitHub Profile: <a href= "https://github.com/undefined" target="_blank">undefined</a></li>
         </ul>
       </div>
       </div>
     </div>
   </div>
+</div>
+<!-- Intern card -->
+<div class="container" id="intern">
+  <div class="card">
+  <div class="row text">
+    <div class="col-sm-4">
+      <div class="card-header">
+      <h2>undefined</h2>
+      <p class="lead">Intern</p></div>
+      <h3><span class="badge badge-secondary">Contact Info</span>
+      </h3>
+      <ul class="list-group">
+        <li class="list-group-item">Email:         undefined</li>
+        <li class="list-group-item">Employee ID:   undefined</li>
+        <li class="list-group-item">GitHub Profile: <a href= "https://github.com/undefined" target="_blank">undefined</a></li>
+      </ul>
+    </div>
+    </div>
+  </div>
+</div>
 </div>
   </body>
 </html>
