almost done need to walkthrough

--- a/develop/index.html
+++ b/develop/index.html
@@ -17,63 +17,38 @@
           <h1>Our Team</h1>
         </div>
       </div>
-      <div class="container">
-      <div class="card">
-      <div class="row text">
-        <div class="col-sm-4">
-          <div class="card-header">
-          <h2>aaa</h2>
-          <p class="lead">Manager</p></div>
+      <div class="row row-cols-1 row-cols-md-3 g-4">
+      <div class="col">
+        <div class="card h-100">
+          <div class="card-body">
+          <h5 class="card-title">humma</h5>
+          <p class="card-text">Manager
           <h3><span class="badge badge-secondary">Contact Info</span>
           </h3>
           <ul class="list-group">
-            <li class="list-group-item">Email: <a href = "mailto:aaaaaaaaaaaaaa">aaaaaaaaaaaaaa</a></li>
-            <li class="list-group-item">Employee ID:   a</li>
+            <li class="list-group-item">Email: <a href = "mailto:huma@yahooc.o.uk">huma@yahooc.o.uk</a></li>
+            <li class="list-group-item">Employee ID:   1237</li>
             <li class="list-group-item">Office Number: undefined</li>
           </ul>
+          </p>
         </div>
         </div>
-      </div>
-    </div>
-  </div>,<div class="container" id="engineer">
-        <div class="card">
-        <div class="row text">
-          <div class="col-sm-4">
-            <div class="card-header">
-            <h2>aaaaaaaaa</h2>
-            <p class="lead">Engineer</p></div>
+  </div>,<div class="col">
+        <div class="card h-100">
+        <div class="card-body">
+        <h5 class="card-title">aaaaaaa</h5>
+            <p class="lead">Engineer
             <h3><span class="badge badge-secondary">Contact Info</span>
             </h3>
             <ul class="list-group">
-              <li class="list-group-item">Email:  <a href = "mailto:55555555555">55555555555</a></li>
-              <li class="list-group-item">Employee ID:   222222222222 </li>
+              <li class="list-group-item">Email:  <a href = "mailto:3333333">3333333</a></li>
+              <li class="list-group-item">Employee ID:   w2222222 </li>
               <li class="list-group-item">GitHub Profile: <a href= "https://github.com/undefined" target="_blank">undefined</a></li>
             </ul>
+            </p>
           </div>
           </div>
-        </div>
-      </div>
-    </div>,<!-- Intern card -->
-        <div class="container" id="intern">
-          <div class="card">
-          <div class="row text">
-            <div class="col-sm-4">
-              <div class="card-header">
-              <h2>111111111</h2>
-              <p class="lead">Intern</p></div>
-              <h3><span class="badge badge-secondary">Contact Info</span>
-              </h3>
-              <ul class="list-group">
-             
-                <li class="list-group-item">Email:  <a href = "mailto:llllllll">llllllll</a></li>
-                <li class="list-group-item">Employee ID:    22222222</li>
-                <li class="list-group-item">School:         undefined</li>
-            </ul>
-            </div>
-            </div>
-          </div>
-        </div>
-        </div>
+        </div>,
       </body>
   </html>
   
