--- a/develop/index.html
+++ b/develop/index.html
@@ -21,13 +21,13 @@
       <div class="col">
         <div class="card h-100">
           <div class="card-body">
-          <h5 class="card-title">humma</h5>
+          <h5 class="card-title">Humma noshine</h5>
           <p class="card-text">Manager
           <h3><span class="badge badge-secondary">Contact Info</span>
           </h3>
           <ul class="list-group">
-            <li class="list-group-item">Email: <a href = "mailto:huma@yahooc.o.uk">huma@yahooc.o.uk</a></li>
-            <li class="list-group-item">Employee ID:   1237</li>
+            <li class="list-group-item">Email: <a href = "mailto:humma@yahoo.co.uk">humma@yahoo.co.uk</a></li>
+            <li class="list-group-item">Employee ID:   01222</li>
             <li class="list-group-item">Office Number: undefined</li>
           </ul>
           </p>
@@ -36,19 +36,38 @@
   </div>,<div class="col">
         <div class="card h-100">
         <div class="card-body">
-        <h5 class="card-title">aaaaaaa</h5>
+        <h5 class="card-title">Farha</h5>
             <p class="lead">Engineer
             <h3><span class="badge badge-secondary">Contact Info</span>
             </h3>
             <ul class="list-group">
-              <li class="list-group-item">Email:  <a href = "mailto:3333333">3333333</a></li>
-              <li class="list-group-item">Employee ID:   w2222222 </li>
+              <li class="list-group-item">Email:  <a href = "mailto:farha@yahoo.co.uk">farha@yahoo.co.uk</a></li>
+              <li class="list-group-item">Employee ID:   123 </li>
               <li class="list-group-item">GitHub Profile: <a href= "https://github.com/undefined" target="_blank">undefined</a></li>
             </ul>
             </p>
           </div>
           </div>
-        </div>,
+        </div>,<div class="col">
+       <div class="card h-100">
+         <div class="card-body">
+         <h5 class="card-title">Nad</h5>
+              <p class="lead">Intern
+              <h3><span class="badge badge-secondary">Contact Info</span>
+              </h3>
+              <ul class="list-group">
+             
+                <li class="list-group-item">Email:  <a href = "mailto:nad@yahoo.co.uk">nad@yahoo.co.uk</a></li>
+                <li class="list-group-item">Employee ID:    123</li>
+                <li class="list-group-item">School:         undefined</li>
+            </ul>
+            </p>
+            </div>
+            </div>
+            </div>
+          </div>
+        </div>
+        </div>
       </body>
   </html>
   
