final checks done all tests pass

--- a/develop/index.html
+++ b/develop/index.html
@@ -21,14 +21,14 @@
       <div class="col">
         <div class="card h-100">
           <div class="card-body">
-          <h5 class="card-title">Humma noshine</h5>
+          <h5 class="card-title">Terry Silver</h5>
           <p class="card-text">Manager
           <h3><span class="badge badge-secondary">Contact Info</span>
           </h3>
           <ul class="list-group">
-            <li class="list-group-item">Email: <a href = "mailto:humma@yahoo.co.uk">humma@yahoo.co.uk</a></li>
-            <li class="list-group-item">Employee ID:   01222</li>
-            <li class="list-group-item">Office Number: undefined</li>
+            <li class="list-group-item">Email: <a href = "mailto:terry@yahoo.co.uk">terry@yahoo.co.uk</a></li>
+            <li class="list-group-item">Employee ID:   123</li>
+            <li class="list-group-item">Office Number: 0123456789</li>
           </ul>
           </p>
         </div>
@@ -36,14 +36,14 @@
   </div>,<div class="col">
         <div class="card h-100">
         <div class="card-body">
-        <h5 class="card-title">Farha</h5>
+        <h5 class="card-title">Humma Noshine</h5>
             <p class="lead">Engineer
             <h3><span class="badge badge-secondary">Contact Info</span>
             </h3>
             <ul class="list-group">
-              <li class="list-group-item">Email:  <a href = "mailto:farha@yahoo.co.uk">farha@yahoo.co.uk</a></li>
-              <li class="list-group-item">Employee ID:   123 </li>
-              <li class="list-group-item">GitHub Profile: <a href= "https://github.com/undefined" target="_blank">undefined</a></li>
+              <li class="list-group-item">Email:  <a href = "mailto:humma@yahoo.co.uk">humma@yahoo.co.uk</a></li>
+              <li class="list-group-item">Employee ID:   456 </li>
+              <li class="list-group-item">GitHub Profile: <a href= "https://github.com/hummanosh" target="_blank">hummanosh</a></li>
             </ul>
             </p>
           </div>
@@ -51,15 +51,15 @@
         </div>,<div class="col">
        <div class="card h-100">
          <div class="card-body">
-         <h5 class="card-title">Nad</h5>
+         <h5 class="card-title">Mike Barns</h5>
               <p class="lead">Intern
               <h3><span class="badge badge-secondary">Contact Info</span>
               </h3>
               <ul class="list-group">
              
-                <li class="list-group-item">Email:  <a href = "mailto:nad@yahoo.co.uk">nad@yahoo.co.uk</a></li>
-                <li class="list-group-item">Employee ID:    123</li>
-                <li class="list-group-item">School:         undefined</li>
+                <li class="list-group-item">Email:  <a href = "mailto:mike@yahoo.co.uk">mike@yahoo.co.uk</a></li>
+                <li class="list-group-item">Employee ID:    789</li>
+                <li class="list-group-item">School:         Cobra Kais Dojo</li>
             </ul>
             </p>
             </div>
